# FeatUp

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.py  example_usage.ipynb  gradio_app.py  hubconf.py  manifest.in  pyproject.toml  setup.py  simple_test.py
.github/workflows/: build_and_upload.yml
featup/: __init__.py  downsamplers.py  layers.py  losses.py  plotting.py  train_implicit_upsampler.py  train_jbu_upsampler.py  train_probes.py  upsamplers.py  util.py
featup/adaptive_conv_cuda/: adaptive_conv.cpp  adaptive_conv.py  adaptive_conv_cuda.cpp  adaptive_conv_kernel.cu  setup.py
featup/configs/: implicit_upsampler.yaml  jbu_upsampler.yaml  train_probe.yaml
featup/datasets/: COCO.py  CUB.py  DAVIS.py  EmbeddingFile.py  HighResEmbs.py  ImageNetSubset.py  JitteredImage.py  SampleImage.py  TransformDatasetWrapper.py  util.py
featup/featurizers/: CLIP.py  DINO.py  DINOv2.py  DeepLabV3.py  MAE.py  MIDAS.py  MaskCLIP.py  ResNet.py  util.py
featup/featurizers/maskclip/: README.md  __init__.py  clip.py  interpolate.py  model.py  simple_tokenizer.py
featup/featurizers/modules/: layers.py  resnet.py  vgg.py
